[gd_scene load_steps=17 format=3 uid="uid://dfncvobr4liih"]

[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="1_0jfxs"]
[ext_resource type="Script" uid="uid://eoabjkrt4o3h" path="res://game_scenes/game_screen/game_screen.gd" id="1_2nm7d"]
[ext_resource type="Theme" uid="uid://capn2565llexb" path="res://game_scenes/game_screen/background.tres" id="2_pjlcr"]
[ext_resource type="Script" uid="uid://ddw586tq4ndmu" path="res://game_scenes/game_screen/Timer_Label.gd" id="2_quooa"]
[ext_resource type="Texture2D" uid="uid://deyg0mophu1js" path="res://images/UI_images/play_button.png" id="4_il6gx"]
[ext_resource type="PackedScene" uid="uid://dif6nj4pejdsw" path="res://card_scenes/card_shadowBackgrounds.tscn" id="4_u4wtv"]
[ext_resource type="PackedScene" uid="uid://dhg0ohpps2lt8" path="res://game_scenes/game_screen/dropdown.tscn" id="5_c2rya"]
[ext_resource type="Script" uid="uid://cghl778n4iahf" path="res://game_scenes/game_screen/Timer_Label2.gd" id="5_i01nf"]
[ext_resource type="PackedScene" uid="uid://dukho3wja08su" path="res://card_scenes/cardFlip.tscn" id="6_2l2jm"]
[ext_resource type="Texture2D" uid="uid://drbg5jbdtxa1x" path="res://images/UI_images/progress_bar/underwater/water_background.png" id="9_1lp2d"]
[ext_resource type="PackedScene" uid="uid://bl2iprvunslcr" path="res://game_scenes/game_screen/timeline.tscn" id="11_i0t33"]
[ext_resource type="Theme" uid="uid://bsacj2o8glxjs" path="res://pixel font/small_font_theme.tres" id="11_qde7s"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="13_t5eb4"]

[sub_resource type="Theme" id="Theme_takis"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwh2p"]
bg_color = Color(0.223529, 0, 0.290196, 1)

[sub_resource type="Theme" id="Theme_bx0w1"]
default_font = ExtResource("13_t5eb4")
default_font_size = 25
Button/styles/normal = SubResource("StyleBoxFlat_fwh2p")

[node name="game_screen" type="Node2D"]
script = ExtResource("1_2nm7d")

[node name="bg_label" type="Label" parent="."]
offset_left = -4.0
offset_top = 12.0
offset_right = 1160.0
offset_bottom = 68.0
theme = ExtResource("2_pjlcr")

[node name="Timer_Label" type="Label" parent="."]
offset_left = 409.0
offset_top = 24.0
offset_right = 539.0
offset_bottom = 58.0
theme = ExtResource("1_0jfxs")
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_quooa")

[node name="pause" type="Button" parent="Timer_Label"]
texture_filter = 1
layout_mode = 0
offset_left = 147.0
offset_top = -1.0
offset_right = 163.0
offset_bottom = 15.0
scale = Vector2(2, 2)
theme = SubResource("Theme_takis")
icon = ExtResource("4_il6gx")

[node name="Timer_Label2" type="Label" parent="."]
offset_left = 610.0
offset_top = 24.0
offset_right = 746.0
offset_bottom = 58.0
theme = ExtResource("1_0jfxs")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_i01nf")

[node name="cardShadow" parent="." instance=ExtResource("4_u4wtv")]
position = Vector2(0, -15)

[node name="dropdown" parent="." instance=ExtResource("5_c2rya")]
position = Vector2(-130, 22)

[node name="a_1" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(100, 360)
scale = Vector2(0.2, 0.2)

[node name="a_2" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(275, 360)
scale = Vector2(0.2, 0.2)

[node name="a_3" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(450, 360)
scale = Vector2(0.2, 0.2)

[node name="d_1" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(700, 360)
scale = Vector2(0.2, 0.2)

[node name="d_2" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(875, 360)
scale = Vector2(0.2, 0.2)

[node name="d_3" parent="." instance=ExtResource("6_2l2jm")]
z_index = 1
position = Vector2(1050, 360)
scale = Vector2(0.2, 0.2)

[node name="background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(575, 325)
scale = Vector2(10, 10)
texture = ExtResource("9_1lp2d")

[node name="timeline" parent="." instance=ExtResource("11_i0t33")]
position = Vector2(0, 12.135)

[node name="AttackSubmit" type="Button" parent="."]
offset_left = 16.0
offset_top = 573.0
offset_right = 180.0
offset_bottom = 604.0
theme = ExtResource("11_qde7s")
text = "Submit Attack"

[node name="DefenseSubmit" type="Button" parent="."]
offset_left = 970.0
offset_top = 573.0
offset_right = 1134.0
offset_bottom = 604.0
theme = ExtResource("11_qde7s")
text = "Submit Defense"

[node name="EndGame" type="Button" parent="."]
offset_left = 970.0
offset_top = 610.0
offset_right = 1134.0
offset_bottom = 641.0
theme = ExtResource("11_qde7s")
text = "End Game"

[node name="Window2" type="Window" parent="."]
initial_position = 2
size = Vector2i(400, 200)
visible = false
unresizable = true
borderless = true

[node name="quit_button" type="Button" parent="Window2"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -60.0
offset_right = 52.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
text = "Finish Game"

[node name="quit_text" type="Label" parent="Window2"]
offset_left = 10.0
offset_top = 15.0
offset_right = 373.0
offset_bottom = 1208.0
text = "     Are you sure you want finish the game now?"
horizontal_alignment = 1

[node name="continue_button" type="Button" parent="Window2"]
offset_left = 135.0
offset_top = 90.0
offset_right = 263.0
offset_bottom = 121.0
text = "Continue Game"

[node name="Window3" type="Window" parent="."]
initial_position = 2
size = Vector2i(800, 400)
visible = false
unresizable = true
borderless = true

[node name="Label" type="Label" parent="Window3"]
offset_left = 125.0
offset_top = 30.0
offset_right = 675.0
offset_bottom = 60.0
theme = ExtResource("1_0jfxs")
text = "Final Attack Detected!"

[node name="Label2" type="Label" parent="Window3"]
offset_left = 110.0
offset_top = 300.0
offset_right = 420.0
offset_bottom = 330.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("11_qde7s")
text = "Risk Analysis for Attack Chain:"

[node name="SpinBox" type="SpinBox" parent="Window3"]
offset_left = 600.0
offset_top = 290.0
offset_right = 700.0
offset_bottom = 321.0
max_value = 100000.0
alignment = 1

[node name="Button" type="Button" parent="Window3"]
offset_left = 300.0
offset_top = 340.0
offset_right = 500.0
offset_bottom = 390.0
theme = ExtResource("1_0jfxs")
text = "Submit"

[node name="TextEdit" type="TextEdit" parent="Window3"]
offset_left = 10.0
offset_top = 70.0
offset_right = 790.0
offset_bottom = 270.0
theme = ExtResource("11_qde7s")
editable = false

[node name="HELP" type="Button" parent="."]
visible = false
offset_left = -3.0
offset_top = 606.0
offset_right = 41.0
offset_bottom = 650.0
focus_mode = 0
theme = ExtResource("1_0jfxs")
text = "?"

[node name="Window5" type="Window" parent="."]
initial_position = 2
visible = false

[node name="TextEdit" type="TextEdit" parent="Window5"]
offset_right = 8.0
offset_bottom = 8.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.533333)

[node name="StartGame" type="Button" parent="CanvasLayer"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = SubResource("Theme_bx0w1")
text = "Start Game"

[connection signal="pressed" from="Timer_Label/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="AttackSubmit" to="." method="_on_attack_submit_pressed"]
[connection signal="pressed" from="DefenseSubmit" to="." method="_on_defense_submit_pressed"]
[connection signal="pressed" from="EndGame" to="." method="_on_end_game_pressed"]
[connection signal="pressed" from="Window2/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Window2/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="value_changed" from="Window3/SpinBox" to="." method="_on_spin_box_2_value_changed"]
[connection signal="pressed" from="Window3/Button" to="." method="_on_final_continue_pressed"]
[connection signal="pressed" from="HELP" to="." method="_on_help_pressed"]
[connection signal="close_requested" from="Window5" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="CanvasLayer/StartGame" to="." method="_on_start_game_pressed"]
